# time_log

./: Cargo.toml  akashic_log.db
src/: app.rs  clocker.rs  database.rs  description.rs  display.rs  main.rs  tag.rs  time_slice.rs  timeline.rs  utils.rs
src/cli/: app.rs  cli.rs  display.rs  mod.rs  utils.rs
src/core/: clocker.rs  database.rs  mod.rs  time_slice.rs  timeline.rs
src/time/: clocker.rs  mod.rs  time_slice.rs
web/: index.html  index2.html  package.json  pnpm-lock.yaml  time-tracker.html
web/src/: App.less  App.tsx  index.css
