[package]
name = "akashic_log"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
chrono = "0.4"
clap = { version = "4.5.27", features = ["derive"] }
dialoguer = "0.11"
shell-words = "1.1.0"
anyhow = "1.0.95"
