[package]
name = "akashic_log"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
chrono = "0.4"
clap = { version = "4.5.27", features = ["derive"] }
shell-words = "1.1.0"
anyhow = "1.0.98"
dialoguer = "0.11.0"
